cursor fix on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,6 @@ body {
 }
 @media only screen and (max-width: 600px) {
   .cursor {
-    /* display: none; */
+    display: none;
   }
 }
